# kernel

./: .gitignore  Cargo.toml  readme.md  rustfmt.toml  x86_64-unknown-bare.json
crates/ffi/ffi_utils/: Cargo.toml
crates/ffi/ffi_utils/src/: lib.rs
crates/ffi/ffi_utils/src/ffi_slice/: mod.rs  slice_const.rs  slice_mut.rs
crates/ffi/page_management/: Cargo.toml
crates/ffi/page_management/src/: lib.rs
crates/ffi/page_management/src/page_table/: kernel_page_table.rs  managed_page_table.rs  manager.rs  mod.rs
crates/ffi/page_management/src/physical/: allocator.rs  map.rs  mod.rs  page_usage.rs
crates/ffi/page_table/: Cargo.toml
crates/ffi/page_table/src/: kernel_page_table.rs  lib.rs
crates/ffi/page_usage/: Cargo.toml
crates/ffi/page_usage/src/: allocator.rs  lib.rs  page_usage.rs
crates/ffi/stack_switch/: Cargo.toml
crates/ffi/stack_switch/src/: lib.rs
crates/kernel/core/: Cargo.toml
crates/kernel/core/src/: lib.rs  main.rs
crates/kernel/cpu_local_storage/: Cargo.toml
crates/kernel/cpu_local_storage/src/: lib.rs
crates/kernel/cpu_local_storage/src/data/: core_id.rs  mod.rs
crates/kernel/interrupt_handling/: Cargo.toml  build.rs
crates/kernel/interrupt_handling/src/: handler_with_registers.asm  lib.rs  perform_system_call.asm
crates/kernel/interrupt_handling/src/handler/: gdt.rs  handler_with_registers.asm  mod.rs  pic.rs
crates/kernel/interrupt_handling/src/handler/apic/: mod.rs
crates/kernel/interrupt_handling/src/handler/pic/: mod.rs  schedule.rs
crates/kernel/kernel_spin/: Cargo.toml
crates/kernel/kernel_spin/src/: lib.rs
crates/kernel/local_apic/: Cargo.toml
crates/kernel/local_apic/src/: lib.rs
crates/kernel/parameters/: Cargo.toml
crates/kernel/parameters/src/: lib.rs
crates/kernel/pic8259/: Cargo.toml
crates/kernel/pic8259/src/: lib.rs
crates/kernel/pit/: Cargo.toml
crates/kernel/pit/src/: lib.rs
crates/kernel/serial_io/: Cargo.toml
crates/kernel/serial_io/src/: lib.rs  logger.rs
crates/libs/acpi/: Cargo.toml
crates/libs/acpi/src/: lib.rs
crates/libs/allocators/: Cargo.toml
crates/libs/allocators/src/: lib.rs
crates/libs/allocators/src/allocators/: fixed_bitmap.rs  kernel_heap_pages.rs  mod.rs
crates/libs/allocators/src/composition/: fall_back.rs  layout_normalizer.rs  linked_chain.rs  locked_global_alloc.rs  magic_alloc_ref.rs  mod.rs  size_deciding.rs
crates/libs/allocators/src/traits/: allocator.rs  mod.rs
crates/libs/allocators/src/utils/: bitset.rs
crates/libs/allocators/tests/: bitset.rs
crates/libs/call_with_stack/: Cargo.toml  build.rs
crates/libs/call_with_stack/src/: call_with_stack.S  call_with_stack.asm  lib.rs
crates/libs/elf_loader/: Cargo.toml
crates/libs/elf_loader/src/: lib.rs  loaded_object.rs  parameters.rs
crates/libs/elf_loader/src/analysis/: mod.rs
crates/libs/elf_loader/src/relocations/: mod.rs
crates/uefi/uefi_loader/: Cargo.toml
crates/uefi/uefi_loader/src/: alloc_utils.rs  load_elf.rs  main.rs  memory_map.rs  read_kernel.rs
crates/uefi/uefi_loader/src/load_elf/: mod.rs  relocation.rs
src/: build.rs  cli.rs  disassemble.rs  main.rs  qemu.rs
src/parameters/: build_parameters.rs  config.rs  mod.rs
src/xtool/: build.rs  clippy.rs  mod.rs
