[package]
name = "kernel"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[workspace]
members = [
    # UEFI code
    "crates/uefi/uefi_loader",

    # Kernel code
    "crates/kernel/core",
    "crates/kernel/serial_io",

    # FFI crates
    "crates/ffi/page_usage",
    "crates/ffi/page_table",
    "crates/ffi/ffi_utils",

    "crates/libs/elf_loader"
]

[profile.release]
opt-level = 3

[dependencies]
structopt = "0.3"
walkdir = "2.3"
