[package]
name = "kernel"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[workspace]
members = [
    # UEFI code
    "crates/uefi/uefi_loader",

    # Kernel code
    "crates/kernel/core",
    "crates/kernel/parameters",
    "crates/kernel/serial_io",
    "crates/kernel/kernel_spin",
    "crates/kernel/cpu_local_storage",
    "crates/kernel/interrupt_handling",
    "crates/kernel/pic8259",

    # FFI crates
    "crates/ffi/page_management",
    "crates/ffi/ffi_utils",

    "crates/libs/elf_loader",
    "crates/libs/call_with_stack",
    "crates/libs/allocators"
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dependencies]
structopt = "0.3"
walkdir = "2.3"
