[package]
name = "kernel_core"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
parameters = { path = "../parameters" }

page_management = { path = "../../ffi/page_management" }

serial_io = { path = "../serial_io" }

allocators = { path = "../../libs/allocators" }

uefi = "0.4.2"

qemu-exit = "0.1"

x86_64 = "0.9"

log = "0.4"
