[package]
name = "interrupt_handling"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[build-dependencies]
nasm-rs = { git = "https://github.com/dbartussek/nasm-rs.git" }
walkdir = "2.3"

[dependencies]
x86_64 = "0.9"

log = "0.4"

lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }

kernel_spin = { path = "../kernel_spin" }

pic8259 = { path = "../pic8259" }
pit = { path = "../pit" }

local_apic = { path = "../local_apic" }
