[package]
name = "parameters"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
page_usage = { path = "../../ffi/page_usage" }
page_table = { path = "../../ffi/page_table" }

serial_io = { path = "../serial_io" }

log = "0.4"

uefi = "0.4.2"
x86_64 = "0.9"
