[package]
name = "serial_io"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = { version = "1.4", default-features = false, features = ["spin_no_std"] }

uart_16550 = "0.2"

x86_64 = "0.9"

log = "0.4"

kernel_spin = { path = "../kernel_spin" }
