[package]
name = "allocators"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
x86_64 = "0.9"

log = "0.4"

num-integer = { version = "0.1", default-features = false }

page_management = { path = "../../ffi/page_management" }
kernel_spin = { path = "../../kernel/kernel_spin" }
