[package]
name = "elf_loader"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
x86_64 = "0.9"

byteorder = { version = "1.3", default-features = false }

[dependencies.goblin]
version = "0.2"
default-features = false
features = [ "elf64", "elf32", "endian_fd", "alloc" ]
