[package]
name = "uefi_loader"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
uefi = { version = "0.4.2", features = ['exts'] }
uefi-services = "0.2"

log = "0.4"

x86_64 = "0.9"

qemu-exit = "0.1"

page_usage = { path = "../../ffi/page_usage" }
page_table = { path = "../../ffi/page_table" }

parameters = { path = "../../kernel/parameters" }

elf_loader = { path = "../../libs/elf_loader" }
call_with_stack = { path = "../../libs/call_with_stack" }
