[package]
name = "uefi_loader"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
uefi = { version = "0.4", features = ['exts'] }
uefi-services = "0.2"

log = "0.4"

num-integer = { version = "0.1", default-features = false }

x86_64 = "0.9"

qemu-exit = "0.1"

page_management = { path = "../../ffi/page_management" }

parameters = { path = "../../kernel/parameters" }
cpu_local_storage = { path = "../../kernel/cpu_local_storage" }

elf_loader = { path = "../../libs/elf_loader" }
call_with_stack = { path = "../../libs/call_with_stack" }
acpi = { path = "../../libs/acpi" }
